<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="passwordHint">Password</string>
    <string name="loginText">Login</string>
    <string name="registerAccount">Belum punya akun? Daftar</string>
    <string name="welcomingText">Selamat Datang</string>
    <string name="usernameText">Username</string>
    <string name="imageprofile">imageProfile</string>
    <string name="usernameRegister">username</string>
    <string name="fullName">Nama Lengkap</string>
    <string name="btnRegister">Daftar</string>
    <string name="registerDone">Sudah punya akun? Masuk</string>
    <string name="createAccount">Buat Akun Baru</string>
    <string name="registerimage">registerImage</string>
    <string name="homeNav">Home</string>
    <string name="bookmarkNav">Bookmark</string>
    <string name="profileNav">Profile</string>
    <string name="emptyImage">emptyImage</string>
    <string name="addNote">Add note</string>
    <string name="bookmarkBorder">Bookmark</string>
    <string name="noteTitle">Note Title</string>
    <string name="noteDescription">Description</string>
</resources>