<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="6dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/pink_border"
            android:padding="16dp">

            <!-- Baris untuk judul dan ikon bookmark -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start|center_vertical">

                <!-- Judul note -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/noteTitle"
                    android:layout_weight="1"
                    android:textColor="@color/red"
                    android:fontFamily="@font/poppins"
                    android:text="@string/noteTitle"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <!-- Ikon bookmark -->
                <ImageView
                    android:id="@+id/bookmarkIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_bookmark_border"
                    android:contentDescription="@string/bookmarkBorder"
                    app:tint="@color/pink" />

            </LinearLayout>

            <!-- Deskripsi note -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/noteDesc"
                android:layout_marginTop="8dp"
                android:maxHeight="170dp"
                android:text="@string/noteDescription"
                android:textSize="14sp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/pink"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>